--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 body {
-	font-family: Georgia;
-
+	font-family: 'Raleway', sans-serif;
 }
 
 
-.main-heading {
+.heading {
 	text-align: center;
 	font-size: 5em;
 	margin: auto;
