--- a/mod2-sol/css/style.css
+++ b/mod2-sol/css/style.css
@@ -2,6 +2,10 @@ body {
 	font-family: 'Raleway', sans-serif;
 }
 
+.entree {
+	padding: 10px 20px;
+	position: relative;
+}
 
 .heading {
 	text-align: center;
@@ -9,8 +13,9 @@ body {
 	margin: auto;
 }
 
-.section-title {
+.entree-title {
 	position: absolute;
+	top: 0;
 	right: 0;
 	font-size: 1.25em;
 }
