--- a/mod2-sol/css/style.css
+++ b/mod2-sol/css/style.css
@@ -3,14 +3,21 @@ body {
 }
 
 .entree {
+	background-color: #eee;
 	padding: 10px 20px;
 	position: relative;
 }
 
-.heading {
-	text-align: center;
-	font-size: 5em;
-	margin: auto;
+.chicken .entree-title{
+	background-color: pink;
+}
+
+.beef .entree-title{
+	background-color: red;
+}
+
+.sushi .entree-title{
+	background-color: beige;
 }
 
 .entree-title {
@@ -20,6 +27,8 @@ body {
 	font-size: 1.25em;
 }
 
-.title {
+.heading {
+	text-align: center;
+	font-size: 5em;
 	margin: auto;
 }
