--- a/mod2-sol/css/style.css
+++ b/mod2-sol/css/style.css
@@ -3,8 +3,10 @@ body {
 }
 
 .entree {
-	background-color: #eee;
-	padding: 10px 20px;
+	background-color: #aaa;
+	height: 350px;
+	margin: 3em 4em;
+	padding: 0 20px 10px;
 	position: relative;
 }
 
@@ -21,10 +23,14 @@ body {
 }
 
 .entree-title {
+	border: 3px solid #000;
+	font-size: 3em;
+	margin-top: 0;
 	position: absolute;
-	top: 0;
 	right: 0;
-	font-size: 1.25em;
+	text-align: center;
+	top: 0;
+	width: 300px;
 }
 
 .heading {
