--- a/mod2-sol/css/style.css
+++ b/mod2-sol/css/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Allura', cursive;
 }
 
 .entree {
@@ -27,9 +27,9 @@ body {
 	font-size: 3em;
 	margin-top: 0;
 	position: absolute;
-	right: 0;
+	top: -3;
+	right: -3;
 	text-align: center;
-	top: 0;
 	width: 300px;
 }
 
