--- a/mod2-sol/css/style.css
+++ b/mod2-sol/css/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 .entree {
+	border: 3px solid #000;
 	background-color: #aaa;
 	height: 350px;
 	margin: 3em 4em;
@@ -11,15 +12,15 @@ body {
 }
 
 .chicken .entree-title{
-	background-color: pink;
+	background-color: #d49898;
 }
 
 .beef .entree-title{
-	background-color: red;
+	background-color: #bf4343;
 }
 
 .sushi .entree-title{
-	background-color: beige;
+	background-color: #e3cf98;
 }
 
 .entree-title {
@@ -27,8 +28,8 @@ body {
 	font-size: 3em;
 	margin-top: 0;
 	position: absolute;
-	top: -3;
-	right: -3;
+	top: -3px;
+	right: -3px;
 	text-align: center;
 	width: 300px;
 }
