--- a/mod2-sol/css/style.css
+++ b/mod2-sol/css/style.css
@@ -43,5 +43,5 @@ body {
 .entree p {
 	margin-top: 90px;
 	font-size: 2.5em;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Fresca', sans-serif;
 }
