--- a/mod2-sol/css/style.css
+++ b/mod2-sol/css/style.css
@@ -6,7 +6,8 @@ body {
 
 .heading {
 	text-align: center;
-	margin: 1.9375rem auto;
+	font-size: 13vw;
+	margin: 1.9375rem 0;
 }
 
 .entree {
@@ -14,12 +15,13 @@ body {
 	background-color: #aaa;
 	height: 350px;
 	margin: 2em 4em;
-	padding: 0 30px 10px;
+	padding: 0 20px;
 	position: relative;
 }
 
 .entree-title {
 	border: 3px solid #000;
+	font-size: 7vw;
 	margin-top: 0;
 	position: absolute;
 	top: -3px;
@@ -42,22 +44,12 @@ body {
 
 .entree p {
 	margin-top: 103px;
+	font-size: 4vw;
 	font-family: 'Fresca', sans-serif;
 }
 
 @media (max-width: 767px) {
-	.entree {
-		padding: 20px;
-	}
-	.entree p {
-		font-size: 4vw;
-	}
-	.heading {
-		font-size: 13vw;
-	}
-	.entry-title {
-		font-size: 7vw;
-	}
+	
 }
 
 @media (min-width: 768px) and (max-width: 991) {
@@ -65,5 +57,10 @@ body {
 }
 
 @media (min-width: 1200px) {
-
+	.entree {
+		padding: 0 30px 10px;
+	}
+	.entree p {
+		font-size: 2.3em;
+	}
 }
