--- a/mod2-sol/css/style.css
+++ b/mod2-sol/css/style.css
@@ -10,13 +10,19 @@ body {
 	margin: 1.9375rem 0;
 }
 
+.content {
+	text-align: center;
+}
+
 .entree {
 	border: 3px solid #000;
+	box-sizing: border-box;
 	background-color: #aaa;
 	height: auto;
 	margin: 2em 2em;
 	padding: 0 20px;
 	position: relative;
+	min-width: 200px;
 }
 
 .entree-title {
@@ -43,16 +49,10 @@ body {
 }
 
 .entree p {
-	margin-top: 65px;
+	margin-top: 60px;
 	font-size: 16px;
 	font-family: 'Fresca', sans-serif;
-}
-
-@media (max-width: 319px) {
-	.entree {
-		margin-right: 0;
-		margin-left: 0;
-	}
+	text-align: left;
 }
 
 @media (max-width: 767px) {
@@ -65,15 +65,65 @@ body {
 	}
 }
 
-@media (min-width: 768px) and (max-width: 991) {
-
+@media (min-width: 544px) {
+	.entree {
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 420px;
+	}
+	.heading {
+		font-size: 71px;
+	}
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 768px) and (max-width: 991px) {
+	.entree {
+		max-width: 999px;
+		margin-bottom: 1em;
+		margin-top: 1em;
+	}
+	.chicken, .beef {
+		display: inline-block;
+		width: 300px;
+		height: 250px;
+		vertical-align: top;
+	}
+	.chicken {
+		margin-left: auto;
+		margin-right: 1em;
+	}
+	.beef {
+		margin-left: 1em;
+		margin-right: auto;
+	}
+	.sushi {
+		width: 638px;
+	}
+	.entree-title {
+		width: 133px;
+	}
+}
+
+@media (min-width: 992px) {
+	.chicken, .beef, .sushi {
+		display: inline-block;
+		vertical-align: top;
+		width: 300px;
+		height: 270px;
+	}
+	.chicken {
+		margin-left: auto;
+		margin-right: 1em;
+	}
+	.beef {
+		margin-left: 1em;
+		margin-right: 1em;
+	}
+	.sushi {
+		margin-left: 1em;
+		margin-right: auto;
+	}
 	.entree {
 		padding: 0 30px 10px;
-	}
-	.entree p {
-		font-size: 2.3em;
 	}
 }
