--- a/mod2-sol/css/style.css
+++ b/mod2-sol/css/style.css
@@ -6,8 +6,9 @@ body {
 
 .heading {
 	text-align: center;
-	font-size: 13vw;
+	font-size: 28px;
 	margin: 1.9375rem 0;
+	min-width: 200px;
 }
 
 .content {
@@ -15,9 +16,9 @@ body {
 }
 
 .entree {
-	border: 3px solid #000;
+	border: 1px solid #000;
 	box-sizing: border-box;
-	background-color: #aaa;
+	background-color: #ACDAE7;
 	height: auto;
 	margin: 2em 2em;
 	padding: 0 20px;
@@ -26,14 +27,14 @@ body {
 }
 
 .entree-title {
-	border: 3px solid #000;
-	font-size: 32px;
+	border: 1px solid #000;
+	font-size: 20px;
 	margin-top: 0;
 	position: absolute;
-	top: -3px;
-	right: -3px;
+	top: -1px;
+	right: -1px;
 	text-align: center;
-	width: 45%;
+	width: 100px;
 }
 
 .chicken .entree-title{
@@ -49,7 +50,7 @@ body {
 }
 
 .entree p {
-	margin-top: 60px;
+	margin-top: 50px;
 	font-size: 16px;
 	font-family: 'Fresca', sans-serif;
 	text-align: left;
@@ -70,9 +71,6 @@ body {
 		margin-left: auto;
 		margin-right: auto;
 		max-width: 420px;
-	}
-	.heading {
-		font-size: 71px;
 	}
 }
 
@@ -97,10 +95,7 @@ body {
 		margin-right: auto;
 	}
 	.sushi {
-		width: 638px;
-	}
-	.entree-title {
-		width: 133px;
+		width: 636px;
 	}
 }
 
